# datamapplot

./: .gitignore  .readthedocs.yaml  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  Manifest.in  README.md  README.rst  WIDGET_INTERNALS_PLAN.md  azure-pipelines.screenshots.yml  azure-pipelines.yml  paper.bib  paper.md  pyproject.toml  pytest.ini  setup.cfg  test-output.xml  test-requirements.txt
.github/workflows/: draft-pdf.yml
datamapplot/: __init__.py  alpha_shapes.py  config.py  create_plots.py  datamapplot_cache_javascript.py  deckgl_template.html  edge_bundling.py  fonts.py  histograms.py  interactive_helpers.py  interactive_rendering.py  label_rendering.py  medoids.py  offline_mode_caching.py  overlap_computations.py  palette_handling.py  plot_rendering.py  rendering_helpers.py  selection_handlers.py  text_placement.py  widget_helpers.py  widgets.py
datamapplot/interactive_tests/: TODO.md  package-lock.json  package.json  playwright.config.ts
datamapplot/interactive_tests/tests/: arxiv_ml.spec.ts  arxiv_ml_filtered.spec.ts  cord_250k_canvas.spec.ts  cord_canvas.spec.ts  custom_cord_250k_canvas.spec.ts
datamapplot/interactive_tests/tests/core/: navigation.spec.ts  search.spec.ts
datamapplot/interactive_tests/tests/datasets/: arxiv_ml.spec.ts  cord_canvas.spec.ts
datamapplot/interactive_tests/tests/features/: colormap.spec.ts  histogram.spec.ts  onclick.spec.ts  selection.spec.ts  (+2 more)
datamapplot/interactive_tests/utils/: canvas.ts  datamap-page.ts
datamapplot/static/: data_selection_manager.js
datamapplot/static/css/: annotation.css  base_styles.css.jinja2  collapsible.css  colormap_selector_style.css  containers_and_stacks.css  d3_histogram_style.css  drawer_style.css  layer_toggle.css  minimap.css  progress_bar_style.css  rest_search.css  selection_control.css  table_of_contents_style.css  topic_tree_style.css
datamapplot/static/js/: annotation.js  collapsible.js  colormap_selector.js  d3_histogram.js  data_selection_manager.js  data_workers.js  datamap.js  datamap_init.js  datamap_utils.js  drawer.js  dynamic_tooltip.js  lasso_selection.js  layer_toggle.js  minimap.js  quad_tree.js  rest_search.js  selection_control.js  table_of_contents.js  topic_tree.js
datamapplot/templates/: content_layout.html.jinja2  data_loaders.js.jinja2  data_setup.js.jinja2  datamap_init.js.jinja2  deckgl_template.html.jinja2  deckgl_template_refactored.html  head_dependencies.html  head_dependencies.html.jinja2  loading_indicator.html.jinja2  progress_bars.html.jinja2  styles.html.jinja2  topic_tree_utils.js.jinja2  utilities.js.jinja2  worker_file.js.jinja  worker_file.js.jinja2  worker_inline.js.jinja2
datamapplot/tests/: conftest.py  test_config.py  test_create_plot.py  test_histogram_click_persistence.py  test_interactive_plotting.py  test_no_google.py  test_offline_data_path.py  test_offline_font_file_handling.py  test_offline_mode_caching.py  test_palette_handling.py  test_plotting.py  test_use_system_fonts.py  test_widgets.py
datamapplot/tests/html/: minimal_basic.html  minimal_colormap.html  minimal_histogram.html  minimal_onclick.html  minimal_search.html  minimal_selection.html  minimal_tooltip.html  minimal_topictree.html
datamapplot/widget_configs/: analyst.json  default.json  minimal.json  presentation.json
doc/: api.rst  api_interactive.rst  api_selection.rst  api_static.rst  basic_usage.ipynb  ci_test_reports.rst  colour_controls.ipynb  community_projects.rst  conf.py  configuration.ipynb  cord-2_point_df.arrow  cord-3_point_df.arrow  cord-4_point_df.arrow  datamapplot_point_df.arrow  demo.ipynb  dev_docs.rst  example_offline_fonts.ipynb  faq.rst  index.rst  installation.rst  interactive_colormaps.ipynb  intro_splash.rst  label_over_points.ipynb  offline_fonts.rst  placement_controls.ipynb  requirements.txt  selection_and_filtering.ipynb  size_controls.ipynb  unmangle_notebook_srcdoc.py  update_baselines.rst  widgets_and_layout.ipynb
doc/_static/: theme_overrides.css
examples/: CORD19-subset-citation_counts.npy  CORD19-subset-citation_counts.npz  CORD19-subset-cluster_labels.npy  CORD19-subset-cluster_labels.npz  CORD19-subset-data-map.npy  CORD19-subset-data-map.npz  CORD19-subset-field_of_study.npy  CORD19-subset-field_of_study.npz  CORD19-subset-publish-dates.npy  CORD19-subset-publish-dates.npz  CORD19-subset-titles.npz  README.rst  Wikipedia-cluster_labels.npy  Wikipedia-cluster_labels.npz  Wikipedia-data_map.npy  Wikipedia-data_map.npz  arxiv_ml_cluster_labels.npy  arxiv_ml_cluster_labels.npz  arxiv_ml_data_map.npy  arxiv_ml_data_map.npz  arxiv_ml_data_map_filtered.npy  arxiv_ml_hover_data.npz  arxiv_ml_hover_data_filtered.npy  arxiv_ml_layer0_cluster_labels.npy  arxiv_ml_layer0_cluster_labels.npz  arxiv_ml_layer0_cluster_labels_filtered.npy  arxiv_ml_layer1_cluster_labels.npy  arxiv_ml_layer1_cluster_labels.npz  arxiv_ml_layer1_cluster_labels_filtered.npy  arxiv_ml_layer2_cluster_labels.npy  arxiv_ml_layer2_cluster_labels.npz  arxiv_ml_layer2_cluster_labels_filtered.npy  arxiv_ml_layer3_cluster_labels.npy  arxiv_ml_layer3_cluster_labels.npz  arxiv_ml_layer3_cluster_labels_filtered.npy  arxiv_ml_layer4_cluster_labels.npy  arxiv_ml_layer4_cluster_labels.npz  arxiv_ml_layer4_cluster_labels_filtered.npy  arxiv_ml_simplified_cluster_labels.npy  arxiv_ml_simplified_cluster_labels.npz  (+40 more)
scripts/: help.py
