[metadata]
name = datamapplot
version = 0.2.2
author = Leland McInnes
author_email = leland.mcinnes@gmail.com
maintainer = Leland McInnes
maintainer_email = leland.mcinnes@gmail.com
description = A library for presentation and publication ready plots of data maps
long_description = file: README.rst
keywords = data map, visualization, topic modelling, cluster, clustering
url = https://github.com/TutteInstitute/datamapplot
license = MIT License
license_files = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Development Status :: 4 - Beta
    Operating System :: OS Independent

[options]
zip_safe = False
packages = datamapplot
python_requires = >=3.9
install_requires =
    numpy>=1.21
    matplotlib>=3.8
    scikit-learn>=1.1
    pandas>=1.0
    datashader>=0.16
    colorspacious>=1.1
    scikit-image>=0.22
    numba>=0.56
    pylabeladjust
    requests
    jinja2
