[metadata]
name = datamapplot
version = 0.6.4
author = Leland McInnes
author_email = leland.mcinnes@gmail.com
maintainer = Leland McInnes
maintainer_email = leland.mcinnes@gmail.com
description = A library for presentation and publication ready plots of data maps
long_description = file: README.rst
keywords = data map, visualization, topic modelling, cluster, clustering
url = https://github.com/TutteInstitute/datamapplot
license = MIT License
license_files = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12    
    Development Status :: 4 - Beta
    Operating System :: OS Independent

[options]
zip_safe = False
include_package_data = True
packages = datamapplot
python_requires = >=3.9
install_requires =
    colorcet
    colorspacious>=1.1
    dask[complete]>=2024.4.1, <2025.0.1
    datashader>=0.16
    importlib-resources
    jinja2
    matplotlib>=3.8
    numba>=0.56
    numpy>=2.0
    pandas>=1.0
    pyarrow
    pylabeladjust
    requests
    rcssmin>=1.1.2
    rjsmin>=1.2.2
    scikit-image>=0.22
    scikit-learn>=1.1
    platformdirs
    typing_extensions

[options.entry_points]
console_scripts =
    dmp_offline_cache = datamapplot.offline_mode_caching:main
